Deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: videoclub
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-videoclub
        image: manosmorf97/frontend-videoclub
        ports:
        - containerPort: 3000
