Deployment/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-stateful
  namespace: videoclub
spec:
  replicas: 1
  selector:
    matchLabels:
      sqlDb: mysql-stateful
  template:
    metadata:
      labels:
        sqlDb: mysql-stateful
    spec:
      containers:
      - name: mysql-db
        image: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
