Deployment/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: videoclub
spec:
  selector:
    app: backend-videoclub
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
