Deployment/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: videoclub
spec:
  selector:
    sqlDb: mysql-stateful
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
