Deployment/ingress-videoclub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-videoclub
  namespace: videoclub
spec:
  tls:
  - hosts:
    - www.cloudvideoclub.com
    secretName: ingress-cert
  ingressClassName: nginx
  rules:
  - host: www.cloudvideoclub.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port: 
              number: 8080
